...

                Spacer(modifier = Modifier.height(48.dp))

                // Email Input field style từ ảnh
                Column(modifier = Modifier.fillMaxWidth()) {
                    Text(
                        text = "Email",
                        fontSize = 13.sp,
                        fontWeight = FontWeight.Bold,
                        fontFamily = peaceSansFont,
                        color = Color.Black,
                        modifier = Modifier.padding(start = 4.dp, bottom = 8.dp)
                    )
...
